fixed the img on mobile size, added the header back in, opps 😄

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -68,7 +68,7 @@
   }
 
   .header {
-    font-size: 3.6rem;
+    font-size: 4.5rem;
     margin: 0;
   }
 
@@ -95,7 +95,7 @@
   .header {
     font-size: 4.5rem;
     margin-bottom: 0;
-    margin-top: 0;
+    margin-top: 2rem;
   }
 
   .about-text {
@@ -122,8 +122,8 @@
 
   .header {
     font-size: 4.5rem;
-    margin-bottom: 0;
-    margin-top: 0;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
   }
 
   .about-text {
@@ -136,7 +136,7 @@
 @media only screen and (max-width: 600px) {
   .about-container {
     align-items: start;
-    margin-top: 2.4rem;
+    margin-top: 0;
     height: 100%;
   }
 
@@ -145,12 +145,14 @@
   }
 
   .image-box img {
-    width: 100%;
+    max-width: 90%;
     height: auto;
   }
 
   .header {
     font-size: 3.6rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
   }
 
   .about-text {
